--- a/style.css
+++ b/style.css
@@ -61,7 +61,13 @@ a:active {
 .entry .entry-content a {
   text-decoration: none;
 }
+.site-title a:link {
+  color: var(--link);
+}
 
+.site-title a:hover {
+  color: var(--hover);
+}
 .entry .entry-content a:hover {
   text-decoration: underline;
 }
@@ -73,7 +79,7 @@ a:active {
 
 .entry-content h3 {
   color: var(--saffron);
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
   font-size: 1.1rem;
 }
 
@@ -98,7 +104,7 @@ blockquote {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 1rem 0 45vh;
+  padding: 1rem 0 37vh;
   margin: 0;
 }
 
@@ -133,13 +139,16 @@ a {
   color: var(--link);
 }
 
+.main-navigation {
+  margin-top: 1.5rem
+}
 .main-navigation .main-menu>li {
   color: var(--link);
 }
 
 .main-navigation .main-menu>li>a {
   color: var(--link);
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .main-navigation .main-menu>li>a:hover {
@@ -157,20 +166,20 @@ a {
 }
 
 .main-navigation .main-menu .menu-item-has-children:not(.off-canvas)[focus-within]>.sub-menu .sub-menu>li>a::before {
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .main-navigation .main-menu .menu-item-has-children:not(.off-canvas):focus-within>.sub-menu .sub-menu>li>a::before {
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .main-navigation .main-menu .menu-item-has-children.off-canvas .sub-menu>li>a,
 .main-navigation .main-menu .menu-item-has-children.off-canvas .sub-menu>li>.menu-item-link-return {
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .main-navigation .sub-menu>li {
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 /* Site branding & Hero */
@@ -227,7 +236,7 @@ textarea:focus {
 }
 
 .page-title {
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .entry .entry-content p {
@@ -261,7 +270,7 @@ h3.callout {
 }
 
 .entry .entry-content .wp-block-button .wp-block-button__link {
-  font-family: Lato, sans-serif;
+  font-family: "NeutraDisplay-Draft";
 }
 
 .entry .entry-content .wp-block-button .wp-block-button__link:not(.has-background) {
@@ -280,12 +289,12 @@ h3.callout {
 
 h3.board-member {
   color: var(--link);
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .board-position {
   color: var(--saffron);
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
 }
 
 .board-description {
@@ -296,7 +305,7 @@ h3.board-member {
 
 .entry .entry-content h4.info-heading {
   color: var(--link);
-  font-family: "NeutraDisplay-Draft";
+  font-family: Lato, sans-serif;
   margin: 32px 0 8px;
 }
 
@@ -327,8 +336,8 @@ footer {
 
 h2.widget-title {
   color: var(--fog);
-  font-family: "NeutraDisplay-Draft";
-  font-size: 1.125rem;
+  font-family: Lato, sans-serif;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
@@ -492,7 +501,7 @@ h2.widget-title {
   }
 
   h2.widget-title {
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
 
   .footer-links a,
@@ -506,7 +515,7 @@ h2.widget-title {
 @media only screen and (min-width: 1024px) {
 
   .site-header {
-    padding: 1rem 0 55vh;
+    padding: 1rem 0 50vh;
   }
 
   .site-description {
@@ -530,7 +539,7 @@ h2.widget-title {
   }
 
   .site-header {
-    padding: 1rem 0 45vh;
+    padding: 1rem 0 47vh;
   }
 
   .member-block {
