--- a/style.css
+++ b/style.css
@@ -51,8 +51,13 @@ html {
   font-family: "NeutraDisplay-Draft";
 }
 
+p {
+  line-height: 1.5;
+}
+
 a {
   color: var(--link);
+  font-weight: 700;
 }
 
 a:visited,
@@ -64,6 +69,7 @@ a:active {
 .entry .entry-content a {
   text-decoration: none;
 }
+
 .site-title a:link {
   color: var(--link);
 }
@@ -71,6 +77,7 @@ a:active {
 .site-title a:hover {
   color: var(--hover);
 }
+
 .entry .entry-content a:hover {
   text-decoration: underline;
 }
@@ -102,8 +109,8 @@ blockquote {
 /*  Header */
 
 .site-header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-mobile-hero-01.jpg);
-  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-mobile-hero-01.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/dogwood-mobile-hero.jpg);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/dogwood-mobile-hero.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -145,6 +152,7 @@ a {
 .main-navigation {
   margin-top: 1.5rem
 }
+
 .main-navigation .main-menu>li {
   color: var(--link);
 }
@@ -270,77 +278,81 @@ p {
 
 h3.callout {
   font-size: 1rem;
+  line-height: 1.5;
 }
 
 .entry .entry-content .wp-block-button .wp-block-button__link {
-  font-family: "NeutraDisplay-Draft";
+  font-family: "Lato", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 600;
 }
 
 .entry .entry-content .wp-block-button .wp-block-button__link:not(.has-background) {
   background-color: var(--saffron);
-  box-shadow: 7px 7px 5px var(--fog);
+  -webkit-box-shadow: 7px 7px 5px var(--fog);
+          box-shadow: 7px 7px 5px var(--fog);
 }
 
 .entry .entry-content .wp-block-button .wp-block-button__link:hover {
   background: var(--gold);
 }
 
-/* Sample donation buttons - remove what won't be used. TODO */
-
-.entry .entry-content .version2 {
-  background-color: var(--saffron);
-  padding: 1rem;
-}
-
 .cta-box-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
-h3.calloutV2,
-h3.calloutV3 {
-  color: #fff;
-  align-self: center;
-  text-align: center;
-  padding-bottom: .5rem;
-  padding-top: .5rem;
+.cta-box-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-h3.calloutV3 {
+h4.home-news {
+  color: var(--link);
+  font-family: Lato, sans-serif;
+
+}
+
+.entry .entry-content .wp-block-latest-posts li {
   color: var(--seed);
+  font-family: Lato, sans-serif;
 }
 
-.cta-box-rightV2,
-.cta-box-rightV3 {
-  display: flex;
-  align-items: center;
+.entry .entry-content .wp-block-latest-posts li a:hover {
+  color: var(--hover);
 }
 
-.entry .entry-content .wp-block-button.cta-donateV2 .wp-block-button__link:hover {
-  background-color: var(--cloud) !important;
-}
-
-.entry .entry-content .version3 {
-  background-image: linear-gradient(rgba(215, 227, 230, 0.8), rgba(215, 227, 230, 0.8)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/buddha-alms-bowl.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 2rem 1.5rem;
+.wp-block-latest-posts__post-date {
+  color: var(--link);
+  font-family: Lato, sans-serif;
 }
 
 /* About */
 
 .entry .entry-content .board-image {
+  border-radius: 5px;
   margin: 0;
+}
+
+.member-picture img {
+  border-radius: 5px;
 }
 
 h3.board-member {
   color: var(--link);
   font-family: Lato, sans-serif;
+  margin: 0;
 }
 
 .board-position {
   color: var(--saffron);
   font-family: Lato, sans-serif;
+  margin: .5rem 0 1rem;
 }
 
 .board-description {
@@ -368,7 +380,9 @@ h3.board-member {
 
 .wp-block-code {
   border: none;
+  padding: 0;
 }
+
 
 /* Footer */
 
@@ -388,10 +402,11 @@ footer {
 }
 
 h2.widget-title {
-  color: var(--fog);
+  color: var(--saffron);
   font-family: Lato, sans-serif;
   font-size: 1.5rem;
   font-weight: 600;
+  margin: 1rem 0 .5rem;
 }
 
 .footer-links,
@@ -414,8 +429,13 @@ h2.widget-title {
   font-family: Lato, sans-serif;
   font-size: 1.125rem;
   font-weight: 500;
-  line-height: 2;
+  line-height: 1.75;
 }
+
+/* 
+p.tel-hours {
+  display: inline-block;
+} */
 
 .contact-info p {
   margin: 0;
@@ -471,8 +491,8 @@ h2.widget-title {
 
   .site-header {
     display: block;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-hero.jpg);
-    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-hero.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-dogwood-hero.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-dogwood-hero.jpg);
     background-position: center center;
     background-size: cover;
     padding: 1rem 0 50vh;
@@ -574,7 +594,7 @@ h2.widget-title {
   .site-description {
     font-size: 1.33rem;
   }
-  
+
   .member-picture {
     -ms-flex-preferred-size: 35%;
     flex-basis: 35%;
@@ -592,7 +612,7 @@ h2.widget-title {
   }
 
   .site-header {
-    padding: 1rem 0 47vh;
+    padding: 1rem 0 51vh;
   }
 
   .member-block {
