Re-edited Donate page. Added in-page navigation.

--- a/donorbox.css
+++ b/donorbox.css
@@ -1,3 +1,6 @@
+/* Uplaoded to Sanghata Foundation's account
+  at https://donorbox.org/ -> "Edit form" tab. */
+
 body * {
 font-family: Lato, sans-serif;
 }
