--- a/style.css
+++ b/style.css
@@ -108,12 +108,12 @@ blockquote {
 /*  Header */
 
 .site-header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/dogwood-mobile-hero.jpg);
-  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/dogwood-mobile-hero.jpg);
-  background-position: center center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-header-3x4.jpg);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-header-3x4.jpg);
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 1rem 0 37vh;
+  padding: 1rem 0 25vh;
   margin: 0;
 }
 
@@ -125,7 +125,7 @@ blockquote {
   color: var(--saffron);
   display: block;
   font-family: "NeutraDisplay-Draft";
-  font-size: .85rem;
+  font-size: .8rem;
   font-weight: 600;
 }
 
@@ -346,7 +346,6 @@ h3.board-member {
 
 #checks,
 #cash,
-#wire-trans,
 #amazonSmile {
   padding-top: 1rem;
 }
@@ -371,7 +370,7 @@ img.donate-icon {
   color: var(--saffron);
 }
 
-.donate-spacer {
+.responsive-spacer {
   height: 1rem !important;
 }
 
@@ -405,13 +404,14 @@ img.donate-icon {
 }
 
 /* Posts */
+
 h1.entry-title {
   font-size: 1.75rem;
 }
 
 h2.entry-title a {
   font-family: "NeutraDisplay-Draft";
-  font-size: 1.25rem;
+  font-size: 1.125rem;
 }
 
 .entry .entry-meta,
@@ -430,13 +430,12 @@ h2.entry-title a {
 
 footer.site-footer {
   /* background-color: var(--link);  */
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.3))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/sanghata-footer-crop.jpg);
-  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/sanghata-footer-crop.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.3))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-footer-4x5.jpg);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-footer-4x5.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* padding: 1rem 0 40vh; */
-  margin: 0;
+  margin: 3rem 0 0;
 }
 
 .widget-title:before {
@@ -525,12 +524,15 @@ h2.widget-title {
 
   .site-header {
     display: block;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-dogwood-hero.jpg);
-    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/06/sanghata-dogwood-hero.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/tablet-header-2.5x1.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/tablet-header-2.5x1.jpg);
     background-position: center center;
     background-size: cover;
-    padding: 1rem 0 50vh;
     margin: 0;
+  }
+
+  .site-description {
+    font-size: 1rem;
   }
 
   .entry .entry-header {
@@ -600,7 +602,8 @@ h2.widget-title {
     max-width: 100%;
   }
 
-  .entry .entry-content .donate-link {
+  /* TODO: remove if/when tablet donate nav looks right
+    .entry .entry-content .donate-link {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -615,9 +618,9 @@ h2.widget-title {
 
   img.donate-icon {
     margin-right: 0;
-  }
+  } */
 
-  .donate-spacer {
+  .responsive-spacer {
     height: 2rem !important;
   }
 
@@ -625,6 +628,13 @@ h2.widget-title {
 
   .hfeed .entry .entry-header {
     margin: calc(3 * 1rem) calc(10% + 1rem) calc(1rem / 2);
+  }
+
+  /* Posts */
+
+  h2.entry-title a {
+    font-family: "NeutraDisplay-Draft";
+    font-size: 1.25rem;
   }
 
   /* Footer */
@@ -644,6 +654,11 @@ h2.widget-title {
     width: fit-content;
   }
 
+  footer.site-footer {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.3))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/tablet-footer-3x1.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/tablet-footer-3x1.jpg);
+  }
+
   h2.widget-title {
     font-size: 1.25rem;
   }
@@ -657,13 +672,8 @@ h2.widget-title {
 }
 
 @media only screen and (min-width: 1024px) {
-
   .site-header {
-    padding: 1rem 0 50vh;
-  }
-
-  .site-description {
-    font-size: 1rem;
+    padding: 1rem 0 30vh;
   }
 
   .member-picture {
@@ -696,10 +706,6 @@ h2.widget-title {
     max-width: 100%;
   }
 
-  .site-header {
-    padding: 1rem 0 51vh;
-  }
-
   .member-block {
     max-width: 100%;
   }
@@ -712,5 +718,17 @@ h2.widget-title {
   .member-info {
     -ms-flex-preferred-size: 65%;
     flex-basis: 65%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .site-header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/laptop-header-3x1.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/laptop-header-3x1.jpg);
+  }
+
+  footer.site-footer {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.3))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/laptop-footer-4.5x1.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/laptop-footer-4.5x1.jpg);
   }
 }
