--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ h3.board-member {
   font-size: .9rem;
 }
 
-/* Donate */
+/* Support */
 
 .donor-nav {
   display: -webkit-box;
@@ -429,7 +429,6 @@ h2.entry-title a {
 /* Footer */
 
 footer.site-footer {
-  /* background-color: var(--link);  */
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.3))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-footer-4x5.jpg);
   background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/mobile-footer-4x5.jpg);
   background-position: center center;
@@ -465,7 +464,6 @@ h2.widget-title {
 .contact-info p,
 .widget_nav_menu ul li a {
   color: var(--link);
-  /* color: #fff; */
   font-size: 1.125rem;
   font-weight: 500;
   line-height: 1.75;
@@ -489,6 +487,7 @@ h2.widget-title {
 }
 
 @media only screen and (min-width: 600px) {
+
   .member-picture {
     -ms-flex-preferred-size: 35%;
     flex-basis: 35%;
@@ -592,7 +591,7 @@ h2.widget-title {
     font-size: 1rem;
   }
 
-  /* Donate */
+  /* Support */
 
   .entry .entry-content .donor-nav {
     -webkit-box-orient: horizontal;
@@ -601,24 +600,6 @@ h2.widget-title {
     flex-direction: row;
     max-width: 100%;
   }
-
-  /* TODO: remove if/when tablet donate nav looks right
-    .entry .entry-content .donate-link {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-
-  img.donate-icon {
-    margin-right: 0;
-  } */
 
   .responsive-spacer {
     height: 2rem !important;
@@ -638,6 +619,7 @@ h2.widget-title {
   }
 
   /* Footer */
+
   #colophon .widget-area {
     margin: calc(2 * 1rem) calc(10% + 1rem);
   }
@@ -702,6 +684,7 @@ h2.widget-title {
 }
 
 @media only screen and (min-width: 1168px) {
+
   .entry .entry-content>* {
     max-width: 100%;
   }
@@ -722,6 +705,7 @@ h2.widget-title {
 }
 
 @media only screen and (min-width: 1440px) {
+  
   .site-header {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.9)), to(rgba(255, 255, 255, 0.1))), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/laptop-header-3x1.jpg);
     background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)), url(https://sanghata.pacifichermitage.org/wp-content/uploads/2019/07/laptop-header-3x1.jpg);
