--- a/style.css
+++ b/style.css
@@ -49,6 +49,48 @@ body * {
   font-family: Lato, sans-serif;
 }
 
+blockquote cite,
+table,
+.entry .entry-content .wp-block-button .wp-block-button__link,
+.entry .entry-content .wp-block-archives li,
+.entry .entry-content .wp-block-categories li,
+.entry .entry-content .wp-block-latest-posts li,
+.entry .entry-content .wp-block-pullquote cite,
+.entry .entry-content .wp-block-cover-image .wp-block-cover-image-text,
+.entry .entry-content .wp-block-cover-image .wp-block-cover-text,
+.entry .entry-content .wp-block-cover-image h2,
+.entry .entry-content .wp-block-cover .wp-block-cover-image-text,
+.entry .entry-content .wp-block-cover .wp-block-cover-text,
+.entry .entry-content .wp-block-cover h2,
+.entry .entry-content .wp-block-audio figcaption,
+.entry .entry-content .wp-block-video figcaption,
+.entry .entry-content .wp-block-image figcaption,
+.entry .entry-content .wp-block-gallery .blocks-gallery-image figcaption,
+.entry .entry-content .wp-block-gallery .blocks-gallery-item figcaption,
+.entry .entry-content .wp-block-file,
+.entry .entry-content .wp-block-file .wp-block-file__button,
+.entry .entry-content .wp-block-latest-comments .wp-block-latest-comments__comment-meta,
+.wp-caption-text,
+.gallery-caption,
+.comment-navigation .nav-previous,
+.comment-navigation .nav-next,
+.comment-list .pingback .comment-body,
+.comment-list .trackback .comment-body,
+.comment-list .pingback .comment-body .comment-edit-link,
+.comment-list .trackback .comment-body .comment-edit-link,
+.comment-form .comment-notes,
+.comment-form label,
+.widget_archive ul li,
+.widget_categories ul li,
+.widget_meta ul li,
+.widget_nav_menu ul li,
+.widget_pages ul li,
+.widget_recent_comments ul li,
+.widget_recent_entries ul li,
+.widget_rss ul li {
+  font-family: Lato, sans-serif;
+}
+
 /* Base colors & Fonts */
 
 .site-title a {
@@ -93,7 +135,6 @@ a:active {
 
 .entry-title {
   color: var(--link);
-  font-family: "NeutraDisplay-Draft";
 }
 
 .entry-content h3 {
@@ -103,6 +144,12 @@ a:active {
 
 blockquote {
   border-left: 2px solid var(--link);
+}
+
+/* Twenty Nineteen tweaks */
+
+.entry .entry-title:before {
+  display: none !important;
 }
 
 /*  Header */
@@ -186,6 +233,7 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   background: var(--hover);
+  font-family: Lato, sans-serif;
 }
 
 input[type="text"]:focus,
@@ -403,15 +451,37 @@ img.donate-icon {
   content: "\007C";
 }
 
+/* Archives (index.php) */
+
+header.entry-header {
+  margin: calc(2 * 1rem) 1rem 1rem;
+}
+
+h1.blog-title::before {
+  background: #fff;
+}
+
+h1.blog-title {
+  color: var(--link);
+  font-size: 1.75rem;
+  margin: 0;
+}
+
 /* Posts */
 
 h1.entry-title {
-  font-size: 1.75rem;
+  font-family: Lato, sans-serif;
+  font-size: 1.125rem;
 }
 
 h2.entry-title a {
-  font-family: "NeutraDisplay-Draft";
   font-size: 1.125rem;
+}
+
+h2.comments-title {
+  color: var(--seed);
+  font-family: Lato, sans-serif;
+  font-size: 1.5rem;
 }
 
 .entry .entry-meta,
@@ -424,6 +494,24 @@ h2.entry-title a {
 .entry .entry-footer a:hover,
 .post-navigation .nav-links a:hover {
   color: var(--hover);
+}
+
+*:before {
+  background: #fff;
+  content: "" !important;
+  height: 0px;
+  width: 0px;
+}
+
+h1:not(.site-title):before,
+h2:before {
+  height: 0;
+}
+
+.comments-area .comments-title-wrap .comments-title:before {
+  height: 0px;
+  margin: 0;
+  width: 0px;
 }
 
 /* Footer */
@@ -608,14 +696,27 @@ h2.widget-title {
   /* Archives */
 
   .hfeed .entry .entry-header {
-    margin: calc(3 * 1rem) calc(10% + 1rem) calc(1rem / 2);
+    margin: calc(2 * 1rem) calc(10% + 1rem) calc(1rem / 2);
+  }
+
+  header.entry-header {
+    margin: calc(3 * 1rem) calc(10% + 1rem) 1rem;
+  }
+
+  .entry .entry-footer {
+    margin: 1rem calc(10% + 1rem) calc(2 * 1rem);
+    max-width: calc(100vw - 20%);
   }
 
   /* Posts */
 
   h2.entry-title a {
-    font-family: "NeutraDisplay-Draft";
     font-size: 1.25rem;
+  }
+
+  .post-navigation {
+    margin: calc(3 * 1rem) calc(10% + 16px);
+    max-width: calc(100vw - 20%);
   }
 
   /* Footer */
